2025-10-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/romalpA.idx, tests/romalpA-[56].ind:
	Add tests for roman numerals.

2025-09-21  Karl Berry  <karl@freefriends.org>

	* tests/nested-range-test.pl: check return status of test run.
	Occasionally the output file doesn't exist before we try to open
	it, for no evident reason. Related to disk caching? Also try
	sleep(1) if it's not there yet.

2025-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/pprec.test, tests/range.idx,
	tests/range4.ist, tests/range{1,2,3,4}.ind:
	Add tests for page range.
	* Makefile.am: Adjust.

2025-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/makeindex.test, tests/head1.ist,
	tests/tort{,W}.idx, tests/ok-tort{,2}.ind:
	Add tests for encap escape & heading_{pre,post}fix.
	* Makefile.am: Adjust.

2024-11-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/{makeindex,pprec}.test: Split test scripts.
	* tests/rangeA[123].ind: Remove unused files.
	* tests/nest.test, tests/nested3.{ist,idx,ind},
	tests/toodeep.idx: Add new tests for nested depth.
	* tests/makeindex.test, tests/tort{,W}.idx, tests/ok-tort.ind:
	Add new tests for error/warning.
	* Makefile.am: Adjust.

2023-08-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/makeindex.test: Make easier to test on Windows.

2022-05-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* scanid.c:
	Improve heuristic detection of page number types
	for ambiguous ones between roman number and alphabet.
	Ref. report from Frank Mittelbach,
	https://tug.org/pipermail/tex-live/2022-May/048137.html
	* tests/makeindex.test, tests/pprec[567].ist,
	tests/romalp[ABCD].idx, tests/romalpA-[56].ind,
	tests/romalp[BD]-[567].ind, tests/romalpC-5.ind, Makefile.am:
	Update tests.
	* configure.ac, mkind.h: Bump version to 2.17

2022-03-08  Karl Berry  <karl@freefriends.org>

	* mkindex.1: update contact info.
	Report from G\"unter Essers,
	https://tug.org/pipermail/tex-k/2022-March/003776.html

2021-09-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
