@@ -1,5 +1,5 @@
 #!/usr/bin/env perl
-# $Id: nested-range-test.pl 76374 2025-09-21 21:26:28Z karl $
+# $Id: nested-range-test.pl 77150 2025-12-21 21:53:52Z karl $
 # Public domain.  Originally written 2011, Karl Berry.
 # Check that makeindex doesn't create spurious output from nested ranges.
 # See nested-range.tex and -bb.tex.
@@ -26,8 +26,9 @@ sub main {
   
   # Seems that unpredictably the output file doesn't exist yet?
   if (! -e $IND) {
-    warn `pwd; ls -lt`;
-    sleep 1;
+    warn "test_run succeeded, but $IND doesn't exist? Sleeping (cmd=@test_args)\n";
+    warn `pwd; ls -lt; ps auxww | grep make`;
+    sleep 2;
   }
   
   # The test fails if the output contains \(.
