@@ -1,3 +1,8 @@
+2025-12-21  Karl Berry  <karl@freefriends.org>
+
+	* tests/nested-range-test.pl: output .ind still not existing
+	sometimes; report explicitly what's happening, and sleep 2.
+
 2025-10-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* tests/romalpA.idx, tests/romalpA-[56].ind:
